Fix z-index.

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -3,6 +3,7 @@
 .nav-bar {
     position: sticky;
     top: 0;
+    z-index: 98;
 }
 .nav-drop {
     position: absolute;
